fix off-center styling / change speeds

--- a/css/darkhard.css
+++ b/css/darkhard.css
@@ -40,10 +40,8 @@ body {
 }
 
 h2 {
-	font-size: 200%;
 	font-family: "Righteous", cursive;
 	text-shadow: 2px 2px whitesmoke;
-	margin-top: -3%;
 	color: ivory;
 }
 
