--- a/css/mainstyle.css
+++ b/css/mainstyle.css
@@ -21,9 +21,9 @@ body {
 	-webkit-box-pack: center;
 	-ms-flex-pack: center;
 	justify-content: center;
+	align-items: center;
 	text-align: center;
 	max-width: 1200px;
-	max-height: 1000px;
 }
 header {
 	display: -webkit-box;
@@ -33,28 +33,29 @@ header {
 	-webkit-box-direction: normal;
 	-ms-flex-direction: column;
 	flex-direction: column;
+	align-items: center;
+	justify-content: center;
 }
+
 h1,
 h5 {
+	text-align: center;
 	font-family: "Righteous", cursive;
-	letter-spacing: 3rem;
-	font-size: 4em;
-	text-shadow: 5px 5px whitesmoke;
+	letter-spacing: 0.5rem;
+	font-size: 2.5rem;
+	text-shadow: 2px 2px whitesmoke;
 	-webkit-animation-name: text-animation;
 	animation-name: text-animation;
 	-webkit-animation-duration: 4s;
 	animation-duration: 4s;
 	-webkit-animation-iteration-count: infinite;
 	animation-iteration-count: infinite;
-	margin-left: 4rem;
-	margin-top: 0%;
 }
 
 h2 {
-	font-size: 200%;
+	font-size: 1.25rem;
 	font-family: "Righteous", cursive;
 	text-shadow: 2px 2px whitesmoke;
-	margin-top: -3%;
 }
 
 /* MODAL STYLING */
@@ -96,14 +97,15 @@ h2 {
 .reset-btn,
 .modal-buttons,
 .how-to-button {
-	padding: 12px 18px;
+	padding: 5px 10px;
 	border: none;
 	outline: none;
 	border-radius: 3px;
 	color: ivory;
 	font-family: "Righteous", cursive;
-	font-weight: 900;
+	font-weight: bold;
 	cursor: pointer;
+	margin: 5px 5px 5px 5px;
 }
 
 .footer-container,
@@ -120,17 +122,20 @@ h2 {
 	justify-content: space-around;
 }
 
+.footer-container {
+	margin-right: 40px;
+}
+
 a {
 	text-decoration: none;
 	color: ivory;
 }
 
 ul {
-	margin: auto;
-	padding-right: 3rem;
-}
-li {
-	display: inline-block;
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	justify-content: space-around;
 	list-style: none;
 }
 /* STATS STYLING */
@@ -145,19 +150,19 @@ li {
 	flex-direction: row;
 	-webkit-box-pack: justify;
 	-ms-flex-pack: justify;
-	justify-content: space-between;
+	justify-content: space-evenly;
 	-ms-flex-line-pack: center;
-	align-content: center;
-	margin: auto;
-	margin-top: 1rem;
-	margin-bottom: -1rem;
+	margin: 5px;
 	color: ivory;
 	font-family: "Righteous", cursive;
+	width: 400px;
 }
 
 .player-turn {
-	font-size: 2.5em;
-	padding-left: 70px;
+	text-align: center;
+	font-size: 1.5em;
+	color: ivory;
+	font-family: "Righteous", cursive;
 }
 
 .reset-container {
@@ -188,10 +193,9 @@ li {
 	-ms-flex-align: center;
 	align-items: center;
 	position: relative;
-	width: 50%;
-	margin: auto;
-	margin-top: 1rem;
-	margin-bottom: 3rem;
+	width: 300px;
+	margin-top: 2rem;
+	margin-bottom: 2rem;
 }
 
 .color-buttons {
@@ -218,4 +222,5 @@ li {
 	z-index: 1;
 	padding-top: 1rem;
 	padding-bottom: 2rem;
+	padding-left: 1rem;
 }
